# adif_map

./: .gitignore  NOTES.md  README.md  pyproject.toml
samples/: sample.adi
src/adimap/: __init__.py  adif.py  cli.py  dxcc.py  maidenhead.py  map_builder.py
tests/: test_adif.py
